--- a/index.html
+++ b/index.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
-<html style="height: 100%; width: 100%;">
+<html style="height: 100%; width: 100%;" lang="">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0，user-scalable=no">
     <title>vue-orca</title>
     <style id="rootFontSize">html{font-size: 100px !important;}</style>
     <script>
-      //designWidth:设计稿的实际宽度值，需要根据实际设置
-      //maxWidth:制作稿的最大宽度值，需要根据实际设置
-      //这段js的最后面有两个参数记得要设置，一个为设计稿实际宽度，一个为制作稿最大宽度，例如设计稿为750，最大宽度为750，则为(750,750)
-      ;(function(designWidth, maxWidth) {
-        var doc = document,
+      // designWidth: 设计稿的实际宽度值，需要根据实际设置
+      // maxWidth: 制作稿的最大宽度值，需要根据实际设置
+      // js的最后面有两个参数，一个为设计稿实际宽度，一个为制作稿最大宽度，例如设计稿为750，最大宽度为750，则为(750,750)
+      (function (designWidth, maxWidth) {
+        let doc = document,
           win = window,
           docEl = doc.documentElement,
           remStyle = document.createElement("style"),
           tid;
 
         function refreshRem() {
-          var width = docEl.getBoundingClientRect().width;
+          let width = docEl.getBoundingClientRect().width;
           maxWidth = maxWidth || 540;
           width>maxWidth && (width=maxWidth);
-          var rem = width * 100 / designWidth;
+          const rem = width * 100 / designWidth;
           remStyle.innerHTML = 'html{font-size:' + rem + 'px;}';
         }
 
         if (docEl.firstElementChild) {
           docEl.firstElementChild.appendChild(remStyle);
         } else {
-          var wrap = doc.createElement("div");
+          let wrap = doc.createElement("div");
           wrap.appendChild(remStyle);
           doc.write(wrap.innerHTML);
           wrap = null;
         }
-        //要等 wiewport 设置好后才能执行 refreshRem，不然 refreshRem 会执行2次；
+
         refreshRem();
 
         win.addEventListener("resize", function() {
-          clearTimeout(tid); //防止执行两次
+          // 防止执行两次
+          clearTimeout(tid);
           tid = setTimeout(refreshRem, 300);
         }, false);
 
         win.addEventListener("pageshow", function(e) {
-          if (e.persisted) { // 浏览器后退的时候重新计算
+          // 浏览器后退的时候重新计算
+          if (e.persisted) {
             clearTimeout(tid);
             tid = setTimeout(refreshRem, 300);
           }
