--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html style="height: 100%; width: 100%;" lang="">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0，user-scalable=no">
     <title>vue-orca</title>
     <style id="rootFontSize">html{font-size: 100px !important;}</style>
@@ -58,6 +59,10 @@
         }
       })(750, 750);
     </script>
+    <!-- 引入高德地图jsApi -->
+    <!--<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.11&key=87f1af7c4b4d86a7bd13155c3bc4ac31"></script>-->
+    <!-- 引入UI组件库（1.0版本） -->
+    <!--<script type="text/javascript" src="https://webapi.amap.com/ui/1.0/main.js"></script>-->
   </head>
   <body>
     <div id="app"></div>
